Manifest.json set ui5VersionNumber 1.120.18

--- a/bc-s4apps01/zauthorityapplicationlist/webapp/manifest.json
+++ b/bc-s4apps01/zauthorityapplicationlist/webapp/manifest.json
@@ -187,5 +187,8 @@
   "sap.cloud": {
     "public": true,
     "service": "bc-s4apps01"
+  },
+  "sap.platform.cf": {
+    "ui5VersionNumber": "1.120.18"
   }
 }
