--- a/bi-s4apps01/zfutureanalysis/webapp/manifest.json
+++ b/bi-s4apps01/zfutureanalysis/webapp/manifest.json
@@ -181,5 +181,8 @@
   "sap.cloud": {
     "public": true,
     "service": "bi-s4apps01"
+  },
+  "sap.platform.cf": {
+    "ui5VersionNumber": "1.120.18"
   }
 }
