--- a/fico-s4apps01/zinventoryaging/webapp/manifest.json
+++ b/fico-s4apps01/zinventoryaging/webapp/manifest.json
@@ -159,5 +159,8 @@
   "sap.cloud": {
     "public": true,
     "service": "fico-s4apps01"
+  },
+  "sap.platform.cf": {
+    "ui5VersionNumber": "1.120.18"
   }
 }
