--- a/mm-s4apps01/poacceptance/webapp/manifest.json
+++ b/mm-s4apps01/poacceptance/webapp/manifest.json
@@ -185,8 +185,7 @@
     "public": true,
     "service": "mm-s4apps01"
   },
-  "sap.cloud": {
-    "public": true,
-    "service": "mm-s4apps01"
+  "sap.platform.cf": {
+    "ui5VersionNumber": "1.120.18"
   }
 }
