--- a/mm-s4apps01/podataanalysis/webapp/manifest.json
+++ b/mm-s4apps01/podataanalysis/webapp/manifest.json
@@ -161,5 +161,8 @@
   "sap.cloud": {
     "public": true,
     "service": "mm-s4apps01"
+  },
+  "sap.platform.cf": {
+    "ui5VersionNumber": "1.120.18"
   }
 }
