--- a/sd-s4apps01/batchcreationdn/webapp/manifest.json
+++ b/sd-s4apps01/batchcreationdn/webapp/manifest.json
@@ -83,7 +83,7 @@
     "handleValidation":true,
     "flexEnabled": true,
     "dependencies": {
-      "minUI5Version": "1.120.17",
+      "minUI5Version": "1.120.18",
       "libs": {
         "sap.m": {},
         "sap.ui.core": {},
@@ -173,5 +173,8 @@
   "sap.cloud": {
     "public": true,
     "service": "sd-s4apps01"
+  },
+  "sap.platform.cf": {
+    "ui5VersionNumber": "1.120.18"
   }
 }
