--- a/fico-s4apps01/zmfgorder/webapp/manifest.json
+++ b/fico-s4apps01/zmfgorder/webapp/manifest.json
@@ -77,7 +77,7 @@
   "sap.ui5": {
     "flexEnabled": true,
     "dependencies": {
-      "minUI5Version": "1.120.17",
+      "minUI5Version": "1.120.18",
       "libs": {
         "sap.m": {},
         "sap.ui.core": {},
@@ -240,6 +240,9 @@
   "sap.cloud": {
     "public": true,
     "service": "fico-s4apps01"
+  },
+  "sap.platform.cf": {
+    "ui5VersionNumber": "1.120.18"
   }
 }
 
