--- a/fico-s4apps01/zstockageupload/webapp/manifest.json
+++ b/fico-s4apps01/zstockageupload/webapp/manifest.json
@@ -95,7 +95,7 @@
   "sap.ui5": {
     "flexEnabled": false,
     "dependencies": {
-      "minUI5Version": "1.124.8",
+      "minUI5Version": "1.120.18",
       "libs": {
         "sap.m": {},
         "sap.ui.core": {},
@@ -235,5 +235,8 @@
   "sap.cloud": {
     "public": true,
     "service": "fico-s4apps01"
+  },
+  "sap.platform.cf": {
+    "ui5VersionNumber": "1.120.18"
   }
 }
