--- a/mm-s4apps01/physicalinventoryupload/webapp/manifest.json
+++ b/mm-s4apps01/physicalinventoryupload/webapp/manifest.json
@@ -81,7 +81,7 @@
   "sap.ui5": {
     "flexEnabled": true,
     "dependencies": {
-      "minUI5Version": "1.124.7",
+      "minUI5Version": "1.120.18",
       "libs": {
         "sap.m": {},
         "sap.ui.core": {}
@@ -175,5 +175,8 @@
   "sap.cloud": {
     "public": true,
     "service": "mm-s4apps01"
+  },
+  "sap.platform.cf": {
+    "ui5VersionNumber": "1.120.18"
   }
 }
