--- a/pp-s4apps01/zledplannedordercomponent/webapp/manifest.json
+++ b/pp-s4apps01/zledplannedordercomponent/webapp/manifest.json
@@ -190,5 +190,8 @@
   "sap.cloud": {
     "public": true,
     "service": "pp-s4apps01"
+  },
+  "sap.platform.cf": {
+    "ui5VersionNumber": "1.120.18"
   }
 }
