--- a/sd-s4apps01/salesdocumentreport/webapp/manifest.json
+++ b/sd-s4apps01/salesdocumentreport/webapp/manifest.json
@@ -77,7 +77,7 @@
     "sap.ui5": {
         "flexEnabled": false,
         "dependencies": {
-            "minUI5Version": "1.124.9",
+            "minUI5Version": "1.120.18",
             "libs": {
                 "sap.m": {},
                 "sap.ui.core": {}
@@ -156,5 +156,8 @@
     "sap.cloud": {
         "public": true,
         "service": "sd-s4apps01"
+    },
+    "sap.platform.cf": {
+      "ui5VersionNumber": "1.120.18"
     }
 }
