--- a/sd-s4apps01/zdndatebatchupdate/webapp/manifest.json
+++ b/sd-s4apps01/zdndatebatchupdate/webapp/manifest.json
@@ -201,5 +201,8 @@
     "sap.cloud": {
         "public": true,
         "service": "sd-s4apps01"
+    },
+    "sap.platform.cf": {
+      "ui5VersionNumber": "1.120.18"
     }
 }
