--- a/mm-s4apps01/physicalinventoryupload/ui5-local.yaml
+++ b/mm-s4apps01/physicalinventoryupload/ui5-local.yaml
@@ -27,7 +27,8 @@ server:
         backend:
           - path: /sap
             url: https://my412552-api.s4hana.cloud.sap
-            destination: UMC_Dev_Customizing_BTP
+            destination: UMC_Dev_Customizing
+            authenticationType: SAMLAssertion
     - name: sap-fe-mockserver
       beforeMiddleware: csp
       configuration:
