--- a/mm-s4apps01/sourcelistupload/ui5-local.yaml
+++ b/mm-s4apps01/sourcelistupload/ui5-local.yaml
@@ -32,6 +32,7 @@ server:
         backend:
           - path: /sap
             url: https://my412552-api.s4hana.cloud.sap
+            destination: UMC_Dev_Customizing_BTP
     - name: sap-fe-mockserver
       beforeMiddleware: csp
       configuration:
