--- a/mm-s4apps01/physicalinventoryupload/ui5-mock.yaml
+++ b/mm-s4apps01/physicalinventoryupload/ui5-mock.yaml
@@ -18,8 +18,7 @@ server:
         backend:
           - path: /sap
             url: https://my412552-api.s4hana.cloud.sap
-            destination: UMC_Dev_Customizing
-            authenticationType: SAMLAssertion
+            destination: UMC_Dev_Customizing_BTP
     - name: fiori-tools-appreload
       afterMiddleware: compression
       configuration:
