MM-018 購買情報マスタ一覧 Destination切换至DA

--- a/mm-s4apps01/purinfomasterlist/ui5.yaml
+++ b/mm-s4apps01/purinfomasterlist/ui5.yaml
@@ -16,10 +16,9 @@ server:
             - /test-resources
           url: https://ui5.sap.com
         backend:
-          - authenticationType: SAMLAssertion # SAML support for vscode
-            path: /sap
+          - path: /sap
             url: https://my412552-api.s4hana.cloud.sap
-            destination: UMC_Dev_Customizing
+            destination: UMC_Dev_Customizing_BTP
     - name: fiori-tools-appreload
       afterMiddleware: compression
       configuration:
