--- a/mm-s4apps01/poposting/ui5-local.yaml
+++ b/mm-s4apps01/poposting/ui5-local.yaml
@@ -32,8 +32,7 @@ server:
         backend:
           - path: /sap
             url: https://my412552-api.s4hana.cloud.sap
-            destination: UMC_Dev_Customizing
-            authenticationType: SAMLAssertion
+            destination: UMC_Dev_Customizing_BTP
     - name: sap-fe-mockserver
       beforeMiddleware: csp
       configuration:
