--- a/sd-s4apps01/zcreditmantablenew/ui5-local.yaml
+++ b/sd-s4apps01/zcreditmantablenew/ui5-local.yaml
@@ -30,10 +30,9 @@ server:
       configuration:
         ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
         backend:
-          - authenticationType: SAMLAssertion # SAML support for vscode
-            path: /sap
+          - path: /sap
             url: https://my412552-api.s4hana.cloud.sap
-            destination: UMC_Dev_Customizing
+            destination: UMC_Dev_Customizing_BTP
     - name: sap-fe-mockserver
       beforeMiddleware: csp
       configuration:
